--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -21,13 +21,16 @@
                 </li>
                 <li class="nav-link">
                     <div class="dropdown">
-                        <a class="dropdown-toggle" href="#!" role="button" id="about-dropdown" data-toggle="dropdown"
+                        <a class="dropdown-toggle" role="button" id="about-dropdown" data-toggle="dropdown"
                             aria-expanded="false">
                             Contact
                         </a>
                         <ul class="dropdown-menu shadow mt-2" aria-labelledby="about-dropdown">
                             <li>
                                 <a class="dropdown-item" href="tel:0209126583">Call Now</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#!">Contact Us</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#!">Careers</a>
