Add contact link and remove margin in footer on larger screens

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -30,7 +30,7 @@
                                 <a class="dropdown-item" href="tel:0209126583">Call Now</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#!">Contact Us</a>
+                                <a class="dropdown-item" href="{% url 'contact_us' %}">Contact Us</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#!">Careers</a>
