--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
 {% block content%}
 {% comment %} Footer {% endcomment %}
 <div class="container-fluid mt-auto footer-wrapper">
-    <footer class="container mt-auto py-5">
+    <footer class="container mt-auto pt-5 g-0 my-0">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
                 <img src="{% static 'img/design/logo-no-background.svg' %}" alt="FineChop brand logo"
@@ -46,7 +46,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 mb-5">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-5 margin-for-mobile">
                 <h1 class="fs-4">Info</h1>
                 <ul class="mt-3">
                     <li><a class="text-decoration-none" href="{% url 'about' %}"
