--- a/contact/templates/contact/contact_us.html
+++ b/contact/templates/contact/contact_us.html
@@ -11,7 +11,7 @@
     <div class="row mt-5">
         <div class="col-sm-12 col-md-6 offset-md-3 p-1 rounded">
             <h1 class="text-center">Contact Us</h1>
-            <form action="">
+            <form action="{% url 'contact_us' %}" method="post">
                 {% csrf_token %}
                 {{ contact_form|crispy }}
                 <button type="submit" class="btn btn-orange text-white float-end">Send</button>
