Reset database and refractor email_subscriptions to news app

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -33,7 +33,7 @@
                                 <a class="dropdown-item" href="{% url 'contact_us' %}">Contact Us</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#!">Careers</a>
+                                <a class="dropdown-item" href="{% url 'careers' %}">Careers</a>
                             </li>
                         </ul>
                     </div>
