--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -46,7 +46,7 @@
 <div class="bg-gradient py-2">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-7 offset-md-1 py-5">
+            <div class="col-xs-12 col-md-8 offset-md-2 py-5">
             <h1 class="w-100 text-center">Subscribe for the latest News and Offers</h1>
             <form method="POST" action="{% url 'subscribe' %}">
                 {% csrf_token %}
@@ -56,7 +56,8 @@
                 <input type="email" name="email" id="id_email_" class="w-100 shadow p-1"
                     placeholder=" Enter your email address" required>
                 <button id="id_submit" name="submit" value="Subscribe" type="submit"
-                    class="btn btn-orange rounded-0 p-1 mt-1 shadow text-white">Subscribe</button>
+                    class="btn btn-orange text-white shadow text-uppercase p-3 mt-2 float-end rounded-0"><i
+                        class="fa-solid fa-bell"></i> Subscribe</button>
             </form>
             </div>
         </div>
