Fix registration sign up form and test live app

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -53,7 +53,7 @@
                 <label for="id_email_field" placeholder="Email" hidden><a class="visually-hidden-focusable"
                         href="#content">Skip to main
                         content</a></label>
-                <input type="email" name="email" id="id_email_" class="w-100 shadow p-1"
+                <input type="email" name="email" id="id_email" class="w-100 shadow p-1"
                     placeholder=" Enter your email address" required>
                 <button id="id_submit" name="submit" value="Subscribe" type="submit"
                     class="btn btn-orange text-white shadow text-uppercase p-3 mt-2 float-end rounded-0"><i
