--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -52,14 +52,8 @@
                                 <a class="dropdown-item" href="{% url 'reservations' %}"
                                     aria-label="create a reservation">Book a Table</a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" href="#!">Buy Gift Card</a>
-                            </li>
                         </ul>
                     </div>
-                </li>
-                <li class="nav-link">
-                    <a href="#!">News</a>
                 </li>
 
             </ul>
@@ -67,7 +61,7 @@
                 <li class="nav-link mx-1">
                     <form class="dropdown" method="GET" action="{% url 'menu' %}">
                         {% csrf_token %}
-                        <a class="dropdown-toggle" href="#" role="button" id="search-dropdown" data-toggle="dropdown"
+                        <a class="dropdown-toggle" role="button" id="search-dropdown" data-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </a>
@@ -77,7 +71,7 @@
                 </li>
                 <li class="nav-link mx-1">
                     <div class="dropdown">
-                        <a class="dropdown-toggle" href="#" role="button" id="login-dropdown" data-toggle="dropdown"
+                        <a class="dropdown-toggle" role="button" id="login-dropdown" data-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fa-solid fa-user"></i>
                         </a>
